hphp/test/zend/bad/ext/mysqli/tests/mysqli_debug_ini.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');

if (!function_exists('mysqli_debug'))
 	die("skip mysqli_debug() not available");

if (!defined('MYSQLI_DEBUG_TRACE_ENABLED'))
	die("skip: can't say for sure if mysqli_debug works");

if (defined('MYSQLI_DEBUG_TRACE_ENABLED') && !MYSQLI_DEBUG_TRACE_ENABLED)
	die("skip: debug functionality not enabled");

require_once('connect.inc');
if (!$IS_MYSQLND || ($MYSQLND_VERSION < 50004))
	die("skip needs mysqlnd version/revision 5.0.4");

if (!$fp = @fopen('/tmp/mysqli_debug_phpt.trace', 'w'))
	die("skip PHP cannot create a file in /tmp/mysqli_debug_phpt");
else
	fclose($fp);
@unlink("/tmp/mysqli_debug_phpt.trace");
?>